2015-07-17  Jacob Fenton  <bocajnotnef@gmail.com>

   * oxli/{functions,build_graph}.py,scripts/{load-graph,normalize-by-median,
   abundance-dist}.py,tests/test_{normalize_by_median,subset_graph,hashbits,
   oxli_function}.py: pylint cleanup

2015-07-17  Michael R. Crusoe  <crusoe@ucdavis.edu>  

   * Makefile, tests/test_read_aligner.py: import khmer when pylinting

2015-07-17  Michael R. Crusoe  <crusoe@ucdavis.edu>

   * lib/read_parser.{cc,hh}: use std::string everywhere to match existing
   exceptions

2015-07-10  Jacob Fenton  <bocajnotnef@gmail.com>

   * khmer/kfile.py: changed check_valid_file_exists to recognize fifos as
   non-empty
   * tests/test_normalize_by_median.py: added test

2015-07-10  Jacob Fenton  <bocajnotnef@gmail.com>

   * oxli/functions.py: changed estimate functions to use correct letter
   abbreviations
   * sandbox/estimate_optimal_hash.py: changed to use renamed estimate 
   functions
   * sandbox/unique-kmers.py: changed to not output recommended HT args by
   default
   * tests/test_oxli_functions.py: changed to use renamed estimate functions

2015-07-10  Jacob Fenton  <bocajnotnef@gmail.com>

   * oxli/functions.py: added '--force' check to sanity check

2015-07-10  Jacob Fenton  <bocajnotnef@gmail.com>

   * oxli/functions.py: moved optimization/sanity check func to oxli
   * scripts/normalize-by-median.py,oxli/build_graph.py: added
   optimization/sanity checking via oxli estimation funcs
   * tests/test_normalize_by_median.py: updated tests to cover estimation funcs

2015-07-08  Luiz Irber  <khmer@luizirber.org>

   * lib/{counting,hashbits,hashtable,labelhash,subset}.cc: print hexadecimal
   representation of the signature read from the file.

2015-07-06  Luiz Irber  <khmer@luizirber.org>

   * sandbox/collect-reads.py: Set a default value for coverage based
   on the docstring.
   * sandbox/count-kmers-single.py, tests/test_{functions,script_arguments}.py:
   Replace xrange and cStringIO (not Python 3 compatible).