@@ -1,3 +1,7 @@
+2015-07-20  Titus Brown  <titus@idyll.org>
+
+   * scripts/normalize-by-median.py: corrected epilog.
+
 2015-07-17  Jacob Fenton  <bocajnotnef@gmail.com>
 
    * oxli/{functions,build_graph}.py,scripts/{load-graph,normalize-by-median,
